[gd_scene load_steps=2 format=3 uid="uid://ipl1bdr5djsu"]

[ext_resource type="Script" uid="uid://421o5e8d2g6j" path="res://scripts/ui/CardDetailsPopup.gd" id="1_u8t6r"]

[node name="CardDetailsPopup" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(10, 10)
script = ExtResource("1_u8t6r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AttackLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnergyGenLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
